--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lovecraftian Generator</title>
+    <script type="text/javascript"> 
+      var totalCount = 990;
+      function ChangeIt() 
+      {
+      var num = Math.ceil( Math.random() * totalCount );
+      document.body.background = './img/'+num+'.png';
+      document.body.style.backgroundRepeat = "repeat";// Background repeat
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
